<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/secondwallpaper"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Amount"
        android:layout_width="390dp"
        android:layout_height="66dp"
        android:text="@string/amount"
        android:gravity="center_vertical"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/date2"
        android:layout_width="377dp"
        android:layout_height="65dp"
        android:gravity="center_vertical"
        android:text="@string/Date"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/memo"
        android:layout_width="384dp"
        android:layout_height="66dp"
        android:gravity="center_vertical"
        android:text="@string/memo"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="379dp"
        android:layout_height="26dp"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        android:text="@string/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/line"
        android:layout_width="379dp"
        android:layout_height="26dp"
        android:text="@string/line"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="379dp"
        android:layout_height="26dp"
        android:text="@string/line"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />


    <TextView
        android:id="@+id/numdate"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:ems="10"
        android:gravity="center"
        android:background="#D2FFCFAF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="showDatePickerDialog"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <EditText
        android:id="@+id/numamount"
        android:layout_width="110dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/money"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        android:background="#D2FFCFAF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/nummemo"
        android:layout_width="376dp"
        android:layout_height="142dp"
        android:background="#D2FFCFAF"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <TextView
        android:id="@+id/dollars"
        android:layout_width="17dp"
        android:layout_height="20dp"
        android:text="@string/dollar"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nummemo"
        app:layout_constraintVertical_bias="0.153" />

    <Switch
        android:id="@+id/simpleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="No"
        android:textOn="Yes"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/simpleSwitch"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toEndOf="@+id/simpleSwitch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

</androidx.constraintlayout.widget.ConstraintLayout>