<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onSecond"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="287dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="225dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="188dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/thismonth"
        android:layout_width="311dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#80C3AC"
        android:gravity="center_vertical"
        android:text=" Savings"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/income"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#D2FFCFAF"
        android:gravity="center_vertical"
        android:text="@string/income"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thismonth"
        app:layout_constraintVertical_bias="0.019" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifkanahei"
        android:layout_width="315dp"
        android:background="@null"
        android:layout_height="236dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/kanahei3"
        app:layout_constraintBottom_toTopOf="@+id/btn_list"
        app:layout_constraintEnd_toEndOf="@+id/enter"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/enter"
        app:layout_constraintTop_toBottomOf="@+id/btn_list"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/paid"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#D2FFCFAF"
        android:gravity="center_vertical"
        android:text="@string/paid"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thismonth"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/enter"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:lineSpacingExtra="-20dp"
        android:text="@string/enter"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paid"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="93dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:onClick="onThird"
        android:text="@string/list"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/btn_others"
        android:layout_width="93dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/others"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_light"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/numthis"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="37dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="+$"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="@+id/thismonth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/numincome"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="0"
        android:textColor="#489E80"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="@+id/income"
        app:layout_constraintTop_toTopOf="@+id/income"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/numpaid"
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:textColor="#E45555"
        android:text="0"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/paid"
        app:layout_constraintTop_toTopOf="@+id/paid"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="17dp"
        android:layout_height="31dp"
        android:text="$"
        android:textColor="#489E80"
        android:gravity="center"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thismonth"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="17dp"
        android:layout_height="31dp"
        android:text="$"
        android:gravity="center"
        android:textColor="#E45555"
        android:textStyle="bold"
        app:fontFamily="@font/coming_soon"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thismonth"
        app:layout_constraintVertical_bias="0.526" />

</androidx.constraintlayout.widget.ConstraintLayout>